fix: 1. mobile menu button vertically align center 2. tidy up pay dollar icon with the text 3. tidy up a bit the address alignment in mobile status 4. quick fix on textbox alignment in mobile status

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -127,6 +127,9 @@ a {
 	-o-transition: color 300ms, background-color 300ms;
 	transition: color 300ms, background-color 300ms;*/
 }
+.float {
+	overflow: hidden;
+}
 .datepicker {
 	line-height: 24px !important;
 }
@@ -3463,8 +3466,13 @@ del {
 }
 .flightcare-hk {
 	text-align: left;
-	font-size: 48px;
 	font-weight: bold;
+	 font-size: 40px;
+}
+@media (min-width: 480px) {
+	.flightcare-hk {
+	    font-size: 48px;
+	}
 }
 .hk {
 	color: #f68a1d;
@@ -5152,9 +5160,10 @@ td[data-title]:before,  td[data-title]:before {
 	font-size: 18px;
 	margin-bottom: 24px;
 }
+/*
 .homecare-lb {
 	padding-right: 45px;
-}
+}*/
 #recent-works-homecare {
 	background: #071d2b;
 }
@@ -5660,12 +5669,13 @@ select#selectHkidPass, .selectHkidPass{ width:98% !important; margin-right:10%;}
 }
 @media screen and (max-width:991px) {
 	.navbar-header {
-	float: none;
+	   float: none;
 	}
 	.navbar-toggle {
-	display:inline;
-	width:70px;
-}
+		display:inline;
+		width:60px;
+		margin-top: 35px;
+    }
 
 }
 .testimonial:after {
@@ -6305,3 +6315,10 @@ tr.product-landing-error-wrap {
 	border-radius: 0px;
 	margin-bottom: 20px;
 }
+/* paydollar */
+@media (min-width: 1200px) {
+    #paydollar-desc {
+        line-height: 45px;
+    }
+}
+
